--- a/textapi/src/app/app.component.html
+++ b/textapi/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-navbar></app-navbar>
-<!-- <app-login></app-login> -->
+<!-- <app-login ngIf="isLog"></app-login>
+<app-product ngIf="!isLog"></app-product> -->
+<app-product ></app-product> 
 <router-outlet></router-outlet>
