--- a/textapi/src/app/login/login.component.html
+++ b/textapi/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="main-layout">
-    <h1 style="padding-left: 13vw;">Login</h1>
+    <h1 style="padding-left: 13vw; color: white;">Login</h1>
     <div class="box-main">
         <mat-form-field class="example-full-width">
             <mat-label>Username</mat-label>
