--- a/textapi/src/app/navbar/navbar.component.html
+++ b/textapi/src/app/navbar/navbar.component.html
@@ -1,7 +1,29 @@
 
-<ul>
-  <li><a class="active" href="/">Home</a></li>
-  <li><a href="/product">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
-</ul>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <div class="container-fluid">
+    <!-- <a class="navbar-brand" href="#">Logo</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button> -->
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Product</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="product/{{operco}}">Product Entry</a></li>
+            <li><a class="dropdown-item" href="#">Product View</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Master</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Transaction</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li> 
+      </ul>
+    </div>
+  </div>
+</nav>
