--- a/textapi/src/app/navbar/navbar.component.html
+++ b/textapi/src/app/navbar/navbar.component.html
@@ -21,7 +21,7 @@
           <a class="nav-link" href="#">Transaction</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="/">LogOut</a>
         </li> 
       </ul>
     </div>
